fix padding/margin on contenst to align correctly

--- a/packages/rigdig/scss/rigdig.scss
+++ b/packages/rigdig/scss/rigdig.scss
@@ -282,6 +282,8 @@ $wrapper-border-radius: 10px !default;
   }
   &__content {
     padding: 15px;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
     padding-bottom: 0;
     &--complete {
       border: solid 1px $gray-500;
